@@ -2,6 +2,7 @@ lot-odroid-n2 (0.6.0) unstable; urgency=medium
 
   * API: Implement SPI source for Linux 
   * API: Add source template
+  * Use Spi_linux.cpp for odroid-n2
 
  --  <odroid@odroid>  Thu, 31 Oct 2019 14:35:36 +0000
 
